--- a/docs/systems/harmonic_well_potential.ipynb
+++ b/docs/systems/harmonic_well_potential.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sympy as sy\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from simtk import unit"
    ]
   },
   {
@@ -16,6 +17,44 @@
    "metadata": {},
    "source": [
     "# Harmonic Well Potential\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from uibcdf_test_systems import HarmonicWell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "harmonic_well = HarmonicWell(n_particles=1, mass=32*unit.amu, k=10.0*unit.kilocalorie/(unit.mole*unit.nanometers**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Quantity(value=11.25, unit=kilocalorie/mole)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "harmonic_well.potential([-1.5, 0.0, 0.0] * unit.nanometers)"
    ]
   },
   {
@@ -42,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
