adding the possibility to include openmm reporters in langevin_NVT

--- a/docs/systems/pentalanine.ipynb
+++ b/docs/systems/pentalanine.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import simtk.unit as unit"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +77,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from uibcdf_test_systems.simulation import langevin_NVT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time, position, velocity, kinetic_energy, potential_energy = langevin_NVT (pentalanine,\n",
+    "                                                                           temperature = 300*unit.kelvin,\n",
+    "                                                                           friction = 1.0/unit.picoseconds,\n",
+    "                                                                           integration_timestep = 2.0*unit.femtoseconds,\n",
+    "                                                                           saving_timestep = 10.0*unit.picoseconds,\n",
+    "                                                                           total_time = 5.0*unit.nanoseconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langevin_NVT (pentalanine,\n",
+    "              temperature = 300*unit.kelvin,\n",
+    "              friction = 1.0/unit.picoseconds,\n",
+    "              integration_timestep = 2.0*unit.femtoseconds,\n",
+    "              saving_timestep = 10.0*unit.picoseconds,\n",
+    "              total_time = 5.0*unit.nanoseconds,\n",
+    "              output='pentalanine.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mdtraj as md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa=md.load('pentalanine.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mdtraj.Topology with 1 chains, 7 residues, 62 atoms, 61 bonds at 0x7fa3519771d0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
