Adding alanine dipeptide with explicit solvent

--- a/docs/contents/alanine_dipeptide/Alanine_Dipeptide_Explicit_Solvent.ipynb
+++ b/docs/contents/alanine_dipeptide/Alanine_Dipeptide_Explicit_Solvent.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "822f5f8f25b24501ab7b33c337aaab26",
+       "model_id": "ad417e2132ae4cb0a88953090ba96e14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,8 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alanine dipeptide in vacuum\n",
-    "\n",
+    "# Alanine dipeptide in explicit solvent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## With OpenMM from scratch"
    ]
   },
@@ -54,18 +59,55 @@
    "outputs": [],
    "source": [
     "from molecular_systems import files\n",
-    "pdbfile_path = files.alanine_dipeptide['vacuum.pdb']"
+    "pdbfile_path = files.alanine_dipeptide['octahedral_14.pdb']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_17a4c_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >form</th>        <th class=\"col_heading level0 col1\" >n_atoms</th>        <th class=\"col_heading level0 col2\" >n_groups</th>        <th class=\"col_heading level0 col3\" >n_components</th>        <th class=\"col_heading level0 col4\" >n_chains</th>        <th class=\"col_heading level0 col5\" >n_molecules</th>        <th class=\"col_heading level0 col6\" >n_entities</th>        <th class=\"col_heading level0 col7\" >n_waters</th>        <th class=\"col_heading level0 col8\" >n_peptides</th>        <th class=\"col_heading level0 col9\" >n_frames</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                                <td id=\"T_17a4c_row0_col0\" class=\"data row0 col0\" >pdb</td>\n",
+       "                        <td id=\"T_17a4c_row0_col1\" class=\"data row0 col1\" >4333</td>\n",
+       "                        <td id=\"T_17a4c_row0_col2\" class=\"data row0 col2\" >1440</td>\n",
+       "                        <td id=\"T_17a4c_row0_col3\" class=\"data row0 col3\" >1438</td>\n",
+       "                        <td id=\"T_17a4c_row0_col4\" class=\"data row0 col4\" >1</td>\n",
+       "                        <td id=\"T_17a4c_row0_col5\" class=\"data row0 col5\" >1438</td>\n",
+       "                        <td id=\"T_17a4c_row0_col6\" class=\"data row0 col6\" >2</td>\n",
+       "                        <td id=\"T_17a4c_row0_col7\" class=\"data row0 col7\" >1437</td>\n",
+       "                        <td id=\"T_17a4c_row0_col8\" class=\"data row0 col8\" >1</td>\n",
+       "                        <td id=\"T_17a4c_row0_col9\" class=\"data row0 col9\" >1</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f098fc95290>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msm.info(pdbfile_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c252bc0939b54632958fbcd57603f5a1",
+       "model_id": "21c16eae854a426ab029f8581903dd24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +120,7 @@
     }
    ],
    "source": [
-    "view = msm.view(pdbfile_path)\n",
+    "view = msm.view(pdbfile_path, surface=True)\n",
     "view"
    ]
   },
@@ -103,9 +145,10 @@
     "topology = pdbfile.topology\n",
     "positions = pdbfile.positions\n",
     "\n",
-    "forcefield = app.ForceField('amber14/protein.ff14SB.xml')\n",
+    "forcefield = app.ForceField('amber10.xml','amber10_obc.xml')\n",
     "\n",
-    "system = forcefield.createSystem(topology, nonbondedMethod=app.NoCutoff, constraints=app.HBonds)\n",
+    "system = forcefield.createSystem(topology, implicitSolvent=app.OBC1,\n",
+    "                                 nonbondedMethod=app.NoCutoff, constraints=app.HBonds)\n",
     "\n",
     "integrator = omm.LangevinIntegrator(temperature, collisions_rate, integration_timestep)\n",
     "integrator.setConstraintTolerance(0.00001)\n",
@@ -162,15 +205,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msm.view([topology, trajectory])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.plot(time, potential_energy)\n",
     "plt.show()"
    ]
@@ -181,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phi_chains, psi_chains, phi_values, psi_values = msm.ramachandran_angles([topology, trajectory])"
+    "_, _, phi_values, psi_values = msm.ramachandran_angles([topology, trajectory])"
    ]
   },
   {
@@ -213,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from molecular_systems import AlanineDipeptideVacuum\n",
+    "from molecular_systems import AlanineDipeptideImplicitSolvent\n",
     "from molecular_systems.tools.md import langevin_NVT"
    ]
   },
@@ -223,15 +257,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialanine=AlanineDipeptideVacuum(forcefield='AMBER14')\n",
+    "dialanine=AlanineDipeptideImplicitSolvent(forcefield='AMBER10')\n",
     "\n",
-    "time, trajectory, velocity, kin_energy, pot_energy = langevin_NVT (dialanine,\n",
-    "                                                                   temperature = 300 * unit.kelvin,\n",
-    "                                                                   friction = 1.0 / unit.picoseconds,\n",
-    "                                                                   initial_positions = dialanine.coordinates,\n",
-    "                                                                   integration_timestep = 2 * unit.femtoseconds,\n",
-    "                                                                   saving_timestep = 1.0 * unit.picoseconds,\n",
-    "                                                                   total_time = 2.0 * unit.nanoseconds)"
+    "time, trajectory, velocity, kin_energy, pot_energy = langevin_NVT(dialanine,\n",
+    "                                                                  temperature = 300 * unit.kelvin,\n",
+    "                                                                  friction = 1.0 / unit.picoseconds,\n",
+    "                                                                  initial_positions = dialanine.coordinates,\n",
+    "                                                                  integration_timestep = 2 * unit.femtoseconds,\n",
+    "                                                                  saving_timestep = 1.0 * unit.picoseconds,\n",
+    "                                                                  total_time = 2.0 * unit.nanoseconds)"
    ]
   },
   {
@@ -240,17 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(time, pot_energy)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, _, phi_values, psi_values = msm.ramachandran_angles([dialanine.topology, trajectory])"
+    "_, _, phi_values, psi_values = msm.ramachandran_angles([topology, trajectory])"
    ]
   },
   {
@@ -260,13 +284,6 @@
    "outputs": [],
    "source": [
     "plt.scatter(phi_values, psi_values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## With OpenExplorer"
    ]
   },
   {
