--- a/docs/contents/alanine_pentapeptide/Alanine_Pentapeptide_Vacuum.ipynb
+++ b/docs/contents/alanine_pentapeptide/Alanine_Pentapeptide_Vacuum.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "131dab04c42443bfa971d35fb3227623",
+       "model_id": "822f5f8f25b24501ab7b33c337aaab26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,14 +54,29 @@
    "outputs": [],
    "source": [
     "from molecular_systems import files\n",
-    "pdbfile_path = files.alanine_dipeptide_vacuum['vacuum.pdb']"
+    "pdbfile_path = files.alanine_dipeptide['vacuum.pdb']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c252bc0939b54632958fbcd57603f5a1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "view = msm.view(pdbfile_path)\n",
     "view"
@@ -69,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1999/1999 [01:19<00:00, 25.30it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temperature = 300.0*unit.kelvin\n",
     "collisions_rate = 1.0/unit.picoseconds\n",
