--- a/docs/contents/alanine_tetrapeptide/Alanine_Tetrapeptide_Vacuum.ipynb
+++ b/docs/contents/alanine_tetrapeptide/Alanine_Tetrapeptide_Vacuum.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "131dab04c42443bfa971d35fb3227623",
+       "model_id": "ad7d75568d7f4dfba3c25a76dd44b54d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,19 +42,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alanine dipeptide in vacuum\n",
+    "# Alanine tetrapeptide in vacuum\n",
     "\n",
     "## With OpenMM from scratch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from molecular_systems import files\n",
-    "pdbfile_path = files.alanine_dipeptide_vacuum['vacuum.pdb']"
+    "pdbfile_path = files.alanine_tetrapeptide['vacuum.pdb']"
    ]
   },
   {
@@ -69,21 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1999/1999 [01:19<00:00, 25.30it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temperature = 300.0*unit.kelvin\n",
     "collisions_rate = 1.0/unit.picoseconds\n",
-    "total_time = 2.0*unit.nanoseconds\n",
+    "total_time = 0.20*unit.nanoseconds\n",
     "saving_timestep = 1.0*unit.picoseconds\n",
     "integration_timestep = 2.0*unit.femtoseconds\n",
     "\n",
@@ -183,7 +175,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(phi_values, psi_values)"
+    "plt.scatter(phi_values[:,0], psi_values[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = msm.get([topology, trajectory], target='atom',\n",
+    "                      selection='group_name==\"ACE\" and atom_name==\"CH3\"',\n",
+    "                      frame_indices='all', coordinates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msm.distance([topology, trajectory],\n",
+    "             selection_1='group_name==\"ACE\" and atom_name==\"CH3\"',\n",
+    "             selection_2='group_name==\"NME\" and atom_name==\"C\"')"
    ]
   },
   {
