--- a/docs/contents/double_well/Double_Well.ipynb
+++ b/docs/contents/double_well/Double_Well.ipynb
@@ -31,7 +31,7 @@
     "Our double well potential, in a single dimension, is described by the following expression:\n",
     "\n",
     "\\begin{equation}\n",
-    "f(x)=E_{0}\\left[ \\left(\\frac{x}{a}\\right)^4 -2\\left(\\frac{x}{a}\\right)^2 \\right]-\\frac{b}{a}x + \\frac{1}{2}\\frac{8E_{0}}{a^2}\\left( y^2 + z^2 \\right)\n",
+    "V(x,y,z)=E_{0}\\left[ \\left(\\frac{x}{a}\\right)^4 -2\\left(\\frac{x}{a}\\right)^2 \\right]-\\frac{b}{a}x + \\frac{1}{2}\\frac{8E_{0}}{a^2}\\left( y^2 + z^2 \\right)\n",
     "\\end{equation}\n",
     "\n",
     "Let's see the meaning of the constants: $E_{0}$, $a$ and $b$. For this purpose the following method is defined to evaluate the contribution of the potential energy terms corresponding to the double well in $X$. The potential for coordinates in $Y$ and $Z$ behaves harmonically."
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def double_well(x,Eo,a,b):\n",
+    "def double_well_potential_1D(x,Eo,a,b):\n",
     "    return Eo*((x/a)**4-2*(x/a)**2)-(b/a)*x"
    ]
   },
@@ -51,7 +51,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Symmetric case ($b=0$)\n",
     "\n",
     "A symmetric double well potential can be represented by the former mathematical expression when $b=0$. In this situation, the double well minima are placed in $x=-a$ and $x=a$. And $E_{0}$ is the value of the barrier height (equal for both basins). Lets verify these statements with an example:"
@@ -231,7 +230,7 @@
     "V(x) = \\frac{1}{2} k (x-x_{0})^{2} = \\frac{1}{2} m \\omega^{2} (x-x_{0})^{2}\n",
     "\\end{equation}\n",
     "\n",
-    "Now, going back to our Taylor expansion of any mathematical function $f(x)$. If the shape of the $f(x)$ around a minimum $x_{0}$ can be approximated with an harmonic potential, this means that the characteristic frequency $\\omega$ of the oscillations around the near surroundings of the minimum is -by comparison with the potential behind the hook's law-:\n",
+    "Now, going back to our Taylor expansion of any mathematical function $f(x)$. If the shape of the $f(x)$ around a minimum $x_{0}$ can be approximated with an harmonic potential, this means that the characteristic frequency $\\omega$ of the oscillations around the near surroundings of the minimum is -by comparison with the potential behind the Hooke's law-:\n",
     "\n",
     "\\begin{equation}\n",
     "\\omega = \\sqrt{\\frac{f''(x_{0})}{m}}\n",
